Export des pièces jointes vers Plat'AU (#72)
* Création de la table des statuts

* Ajout des cases à cocher

* Mise à jour des statuts "pas envoyé" => "en attente d'envoi"

* Ajout d'un statut d'erreur

* Interdit la suppression d'une pj en attente d'envoi ou envoyée

* Permet de renvoyer une pj dont l'envoi était en erreur

* Libellés plus descriptifs

* N'affiche pas l'envoi des pjs vers Plat'AU sur des dossiers uniquement Prevarisc

* Correction de l'affichage lors de l'ajout d'une pj

* Affichage des PJs pouvant être envoyées vers Plat'AU à la sauvegarde du dossier

* Changement du statut des PJs lors de la sauvegarde du dossier

* Changement de statut possible que sur des Etudes

* Ajout de statuts pour la pec et l'avis platau & Affichage en front

* Permet de renvoyer une pec ou un avis

* Ajout de la date d'envoi

* Ajout d'un statut d'erreur

* Empêche le renvoi de PEC et le changement d'avis une fois l'avis rendu sur Plat'AU

* Affiche la liste des PJs si le statut est "à renvoyer"

* Correction pour les dossiers arrivés avant l'ajout des statuts

* Bloc spécifique Plat'AU

* Dates en français

* Les classes n'étaient pas correctes

* Ajout warning si avis/pec en erreur

* Evite de planter en front si statut inconnu

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -132,7 +132,7 @@
                     <i class='icon-calendar icon-black'></i> Afficher ordre du jour
                 </a>
             </li>
-        <?php endif; ?>
+        <?php endif ?>
 
         <?php if (!$verrou && $this->is_allowed_delete_dossier) : ?>
             <li>
@@ -146,13 +146,13 @@
                         <i class="icon-remove icon-black"></i>
                         Supprimer le dossier
                     </a>
-                <?php endif; ?>
+                <?php endif ?>
             </li>
-        <?php endif; ?>
+        <?php endif ?>
     </ul>
 
     <?php $this->placeholder('lateral_navigation')->captureEnd();
-endif; ?>
+endif ?>
 
 <?php $this->placeholder('page_header')->captureStart();  // Capture du 'before_content'?>
 
@@ -230,7 +230,7 @@ endif; ?>
 
         <small><br/><?= nl2br($this->objetDossier) ?></small>
 
-        <?php if(null !== $this->id_platau): ?>
+	    <?php if (null !== $this->id_platau): ?>
             <p style='font-size: medium;' class='label label-info'>
                 <strong>CONSULTATION PLATAU : <?= $this->id_platau ?></strong>
             </p>
@@ -238,7 +238,7 @@ endif; ?>
 
         <div style='margin:10px; line-height: 20px;' id='infosEtabs'>
             <?php
-            $nbEtab = count($this->enteteEtab)> 0;
+            $nbEtab = count($this->enteteEtab);
 
             if($nbEtab > 0): ?>
                 <?php if($nbEtab == 1 && $this->enteteEtab[0]["LIBELLE_GENRE"] == "Site"): ?>
@@ -326,7 +326,7 @@ endif; ?>
             <?php endif ?>
         </div>
     </h2>
-<?php endif; ?>
+<?php endif ?>
 
 <div class='grid_16' >
     <?= "<input type='hidden' name='idDossier' id='idDossier' value='".$this->idDossier."' />"; ?>
