--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -1,29 +1,59 @@
 <?php foreach ($this->listePj as $pj) : ?>
-<tr>   
-    <?php /* Lien de la pièce jointe */ ?>
-    <td>
-        <a 
-            class="file <?php echo substr(strtolower($pj['EXTENSION_PIECEJOINTE']), 1, 3) ?>"
-            href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>' <?php if ($pj['DESCRIPTION_PIECEJOINTE']): ?> title="<?php echo $pj['DESCRIPTION_PIECEJOINTE'] ?>" <?php endif ?> target='_blank' ><?php echo $pj['NOM_PIECEJOINTE'].$pj['EXTENSION_PIECEJOINTE'] ?></a>
-    </td>
-    
-    <?php /* Description */ ?>
-    <td><?php echo nl2br(str_replace("<br />", "" ,$pj['DESCRIPTION_PIECEJOINTE'])) ?></td>
-    
-    <?php /* date de création*/ ?>
-    <td>
-        <?php
-            $date = new Zend_Date($pj['DATE_PIECEJOINTE'], Zend_Date::DATES);
-            echo $date->get( Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR );
-        ?>
-    </td>
-    <?php /* Action*/ ?>
-    <td>
-        <?php if($this->verrou != 1): ?>
-            <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"] ?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
-                <i class="icon-trash"></i>
-            </a>
+    <tr>
+        <!-- Lien de la pièce jointe -->
+        <td>
+            <a
+                class="file <?php echo substr(strtolower($pj['EXTENSION_PIECEJOINTE']), 1, 3) ?>"
+                href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>'
+                <?php if ($pj['DESCRIPTION_PIECEJOINTE']): ?> title="<?php echo $pj['DESCRIPTION_PIECEJOINTE'] ?>" <?php endif ?>
+                target='_blank' >
+                    <?php echo $pj['NOM_PIECEJOINTE'].$pj['EXTENSION_PIECEJOINTE'] ?>
+                </a>
+        </td>
+
+        <!-- Description -->
+        <td><?php echo nl2br(str_replace("<br />", "" ,$pj['DESCRIPTION_PIECEJOINTE'])) ?></td>
+
+        <!-- Date de création -->
+        <td>
+            <?php
+                $date = new Zend_Date($pj['DATE_PIECEJOINTE'], Zend_Date::DATES);
+                echo $date->get( Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR );
+            ?>
+        </td>
+
+        <?php if ($this->isPlatau): ?>
+            <td class="checkbox">
+                <?php switch ($pj['NOM_STATUT']):
+                    case 'not_exported': ?>
+                        <div class="label">Non envoyé</div>
+                <?php break;
+                    case 'to_be_exported': ?>
+                        <div class="label label-info">En attente d'envoi</div>
+                <?php break;
+                    case 'exported': ?>
+                        <div class="label label-success">Envoyé</div>
+                <?php break;
+                    case 'on_error': ?>
+                        <div class="label label-important">Erreur lors de l'envoi</div>
+                        <div>
+                            <a href="#" class="retry-export-platau" data-id="<?= $pj['ID_PIECEJOINTE'] ?>">Renvoyer</a>
+                        </div>
+                <?php break;
+                    case null:
+                    default: ?>
+                        <div class="label label-warning">Statut inconnu</div>
+                <?php endswitch ?>
+            </td>
         <?php endif ?>
-    </td>
-</tr>
+
+        <!-- Action -->
+        <td>
+            <?php if($this->verrou != 1 && !in_array($pj['NOM_STATUT'], ['to_be_exported', 'exported'])): ?>
+                <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"] ?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
+                    <i class="icon-trash"></i>
+                </a>
+            <?php endif ?>
+        </td>
+    </tr>
 <?php endforeach ?>
