--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1244,6 +1244,10 @@ dl.champ_effectif_camping dd input {
     margin-bottom: 10px;
 }
 
+#dossierInfos li:focus {
+    outline: solid 2px blue;
+}
+
 #ign-accordion span > i {
     cursor: pointer;
 }
