Renommage pour coller aux modifications

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -60,7 +60,7 @@
             <li class="<?= strpos($this->action, 'avis-et-derogations') !== false ? 'active' : '' ?>">
                 <a href="<?= $this->url(['controller' => 'dossier', 'action' => 'avis-et-derogations', 'id' => $this->idDossier], false, true) ?>">
                     <i class="icon-file icon-black"></i>
-                    Avis et dérogation
+                    Avis et dérogations
 
                     <?php if($this->hasAvisDerogation): ?>
                         <div class="greenCircle pull-right"></div>
