--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -87,7 +87,7 @@
     </div>
 
     <div class="control-group">
-        <label class="control-label"for="DISPLAY_HISTORIQUE">Afficher dans l'historique de l'établissement</label>
+        <label class="control-label"for="DISPLAY_HISTORIQUE">Afficher dans l'onglet de l'établissement</label>
         <div class="controls">
             <input type='hidden' name='DISPLAY_HISTORIQUE' value='0'>
             <input
