--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -18,7 +18,7 @@
                 </a>
             </p>
             <div class="flex">
-                <label for="affHistorique">Afficher dans l'historique de l'établissement</label>
+                <label for="affHistorique">Afficher dans l'onglet de l'établissement</label>
                 <input
                     type="checkbox"
                     name="affHistorique"
