Icônes plus en phase avec le style

--- a/application/views/scripts/calendrier-des-commissions/index.phtml
+++ b/application/views/scripts/calendrier-des-commissions/index.phtml
@@ -121,8 +121,8 @@
 			}
 			var calendar = $('#calendar').fullCalendar( {
                 buttonIcons:{
-                    prevYear: '',
-                    nextYear: ''
+                    prevYear: 'seek-prev',
+                    nextYear: 'seek-next'
                 },
 				buttonText: {
 					month: 'Mois',
