--- a/application/views/scripts/calendrier-des-commissions/alertsuppression.phtml
+++ b/application/views/scripts/calendrier-des-commissions/alertsuppression.phtml
@@ -10,6 +10,5 @@ Vous êtes sur le point de supprimer une date dans le calendrier.<br/>
 Cela entrainera la suppression de toutes les dates de commissions dans les dossiers qui y sont affectés.<br/>
 L'ensemble des pièces jointes liées à cette date sera supprimé.<br/>
 <br/>
-<button class='btn' id='validSupp' ><em class='icon-trash' id='suppression'></em>Supprimer</button>
-&nbsp;&nbsp;&nbsp;&nbsp;
-<button class='btn' id='cancelSupp' ><em class='icon-ban-circle'></em>Annuler</button>
+<button class='btn btn-danger' id='validSupp'>Supprimer</button>
+<button class='btn' id='cancelSupp'>Annuler</button>
